@@ -2,6 +2,7 @@
 ==========================
 
 - Restore long press behavior to v48
+- Add button size workaround for gtk >= 4.19.2
 - Fix fixed cells opening the picker
 
 49.beta - August 1, 2025
